tests/cases/errors/event_list_unsupported/main.sv
module Top;
  logic a;
  logic b;
  initial begin
    @(a or b);
  end
endmodule
